[tool.poetry]
name = "prkng-mtl"
version = "0.1.0"
description = ""
authors = ["Coklacour <jeremie.alluard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.67.1"
fiona = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
